--- a/Alura/Jasmine/SpecRunner.html
+++ b/Alura/Jasmine/SpecRunner.html
@@ -24,13 +24,22 @@
 
   
 
-<!-- include source files here... -->
+<!-- imports das classes -->
   
 <script type="text/javascript" src="src/MaiorEMenor.js"></script>
+<script type="text/javascript" src="src/Paciente.js"></script>
+<script type="text/javascript" src="src/Consulta.js"></script>
+<script type="text/javascript" src="spec/PacienteBuilder.js"></script>
+<script type="text/javascript" src="src/Agendamento.js"></script>
 
-<!-- include spec files here... -->
+
+<!-- Specs... -->
 
 <script type="text/javascript" src="spec/MaiorEMenorSpec.js"></script>
+<script type="text/javascript" src="spec/PacienteSpec.js"></script>
+<script type="text/javascript" src="spec/ConsultaSpec.js"></script>
+<script type="text/javascript" src="spec/AgendamentoSpec.js"></script>
+
 </body>
 
 </html>
